# online_pdp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  TODO  course.json  course_1.json  db_insert  docker-compose.yaml  main.html  manage.py  nginx.conf  pyproject.toml  requirements.txt  work.py
apps/: __init__.py  urls.py
apps/models/: __init__.py  base.py  videos.py
apps/payments/models/: __init__.py  base.py  plans.py
apps/shared/: manager.py  models.py
apps/tasks/: urls.py  views.py
apps/tasks/checker/: Dockerfile.runner  main.py
apps/tasks/fixtures/: answers.json  examples.json  problems.json  topics.json
apps/tasks/models/: __init__.py  tasks.py
apps/tasks/templatetags/: custom_filters.py
apps/tasks/utils/: __init__.py  checker.py
apps/users/: admin.py  apps.py  forms.py  signals.py  urls.py  utils.py  views.py
apps/users/admin/: __init__.py  base_admin.py  courses.py  users.py
apps/users/fixtures/: abouts.json  blogs.json  course.json  interviews.json  lesson.json  section.json
apps/users/migrations/: 0001_initial.py  0002_alter_course_options_alter_course_practice_count_and_more.py
apps/users/models/: __init__.py  blogs.py  courses.py  interviews.py  proxies.py  user.py  users.py
locale/en/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
online_pdp/: asgi.py  settings.py  urls.py  wsgi.py
payments/models/: plans.py
root/: settings.py  urls.py
templates/admin/: login.html
templates/tasks/: task.html
templates/users/: base.html  interview.html  main.html
users/: models.py
(+1287 files in other folders)
