[project]
name = "online-pdp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-ckeditor-5>=0.2.18",
    "django-debug-toolbar>=6.0.0",
    "django-jazzmin>=3.0.1",
    "django-nested-inline>=0.4.6",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
